--- a/project/templates/dates.html
+++ b/project/templates/dates.html
@@ -13,7 +13,7 @@
       <tr>
         <th scope="col">Name</th>
         <th scope="col">Priority</th>
-        <th scope="col">Comment</th>
+        <th scope="col">Regions</th>
         <th scope="col">Start</th>
         <th scope="col">End</th>
       </tr>
@@ -22,11 +22,11 @@
 
       {% for rec in data %}
       <tr>
-        <td><a href="{{ url_for('gui_blueprint._editdate', id=rec.id) }}">{{ rec.doi_name }}</a></td>
-        <td>{{ rec.doi_priority }}</td>
-        <td>{{ rec.doi_comment }}</td>
-        <td>{{ rec.doi_start_dt }}</td>
-        <td>{{ rec.doi_end_dt }}</td>
+        <td><a href="{{ url_for('gui_blueprint._editdate', id=rec[0].id) }}">{{ rec[0].doi_name }}</a></td>
+        <td>{{ rec[1].param_value }}</td>
+        <td>{{ rec[0].doi_regions }}</td>
+        <td>{{ rec[0].doi_start_dt.strftime('%d-%m-%Y %H:%M') }}</td>
+        <td>{{ rec[0].doi_end_dt.strftime('%d-%m-%Y %H:%M') }}</td>
       </tr>
       {% else %}
         <tr><td colspan=5 class="alert alert-primary"><strong>There are no dates of interest entries to view </strong></td></tr>
