--- a/project/templates/editparameter.html
+++ b/project/templates/editparameter.html
@@ -5,69 +5,63 @@
 {% endblock %}
 {% block content %}
 
-<div class="card text-center w-50 border-dark mx-auto">
 
     {% if data %}
-    <h5 class="card-header text-white bg-info">Parameter: #{{ data.id }} : "{{ data.param_name }}"</h5>
-    <div class="card-body px-lg-5 pt-0">
+    <h5 class="card-header text-white bg-secondary">Parameter: #{{ data.id }} : "{{ data.param_name }}"</h5>
     <form action="{{ url_for('gui_blueprint._editparameter', id=data.id, group=session["group"]) }}" method="POST" novalidate class="text-center" style="color: #000000;">
     {% else %}
-    <h5 class="card-header text-white bg-info">New Parameter</h5>
-    <div class="card-body px-lg-5 pt-0">
+    <h5 class="card-header text-white bg-secondary">New Parameter</h5>
     <form action="{{ url_for('gui_blueprint._editparameter', id=0, group=session["group"]) }}" method="POST" novalidate class="text-center" style="color: #000000;">
     {% endif %}
 
-        <table class="form-group">
+        <table class="form-group w-75">
           <tr>
             <td>{{ form.hidden_tag() }}</td>
             <td>&nbsp;</td>
           </tr>
           <tr>
-            <td class="px-4 py-1">{{ form.param_name.label }}</td>
-            <td class="px-4 py-1">{{ form.param_name(size=32, class_="form-control") }}</td>
+            <td class="w-25 text-right mx-2 p-1">{{ form.param_name.label }}</td>
+            <td class="w-75 text-right mx-2 p-1">{{ form.param_name(size=32, class_="form-control") }}</td>
           </tr>
           <tr>
-            <td class="px-4 py-1">{{ form.param_value.label }}</td>
-            <td class="px-4 py-1">{{ form.param_value(rows=10, cols=30, class_="form-control") }}</td>
+            <td class="w-25 text-right mx-2 p-1">{{ form.param_value.label }}</td>
+            <td class="w-75 text-right mx-2 p-1">{{ form.param_value(rows=10, cols=30, class_="form-control") }}</td>
           </tr>
           <tr>
-            <td class="px-4 py-1">{{ form.param_group.label }}</td>
-            <td class="px-4 py-1">{{ form.param_group(class_="custom-select form-control input-lg") }}</td>
+            <td class="w-25 text-right mx-2 p-1">{{ form.param_group.label }}</td>
+            <td class="w-75 text-right mx-2 p-1">{{ form.param_group(class_="custom-select form-control input-lg") }}</td>
           </tr>
           <tr>
-            <td class="px-4 py-1">{{ form.param_parent.label }}</td>
-            <td class="px-4 py-1">{{ form.param_parent(size=32, class_="form-control") }}</td>
+            <td class="w-25 text-right mx-2 p-1">{{ form.param_parent.label }}</td>
+            <td class="w-75 text-right mx-2 p-1">{{ form.param_parent(size=32, class_="form-control") }}</td>
           </tr>
           <tr>
-            <td class="px-4 py-1">{{ form.param_disabled.label }}</td>
-            <td class="px-4 py-1">{{ form.param_disabled(size=1, class_="form-control") }}</td>
+            <td class="w-25 text-right mx-2 p-1">{{ form.param_disabled.label }}</td>
+            <td class="w-75 text-right mx-2 p-1">{{ form.param_disabled(size=1, class_="form-control") }}</td>
           </tr>
 
           {% if form.param_critical.data == 0 %}
           <tr>
-            <td class="px-4 py-1">{{ form.param_critical.label }}</td>
-            <td class="px-4 py-1">{{ form.param_critical(size=1, class_="form-control") }}<small class="text-danger">Setting this option means the parameter cannot be deleted in future!</small></td>
+            <td class="w-25 text-right mx-2 p-1">{{ form.param_critical.label }}</td>
+            <td class="w-75 text-right mx-2 p-1">{{ form.param_critical(size=1, class_="form-control") }}<small class="text-danger">Setting this option means the parameter cannot be deleted in future!</small></td>
           </tr>
           {% else %}
           <tr>
-            <td class="px-4 py-1">{{ form.param_critical.label }}</td>
-            <td class="px-4 py-1">{{ form.param_critical(size=1, class_="form-control", disabled=True) }}<small class="text-danger">Setting this option means the parameter cannot be deleted or unset in future!</small></td>
+            <td class="w-25 text-right mx-2 p-1">{{ form.param_critical.label }}</td>
+            <td class="w-75 text-right mx-2 p-1">{{ form.param_critical(size=1, class_="form-control", disabled=True) }}<small class="text-danger">Setting this option means the parameter cannot be deleted or unset in future!</small></td>
           </tr>
           {% endif %}
 
           <tr>
             <td>&nbsp;</td>
-            <td class="p-5">{{ form.savebtn(class_="btn btn-primary button_fpa") }} <button type=button name="cancel" id="cancel" class="btn btn-primary button_fpa" onclick="location.href='{{ url_for('gui_blueprint._parameters', group=session["group"]) }}'">Cancel</button></td>
-
+            <td class="p-5">{{ form.savebtn(class_="btn btn-primary button_fpa") }} <button type=button name="cancel" id="cancel" class="btn btn-primary button_fpa" onclick="location.href='{{ url_for('gui_blueprint._parameters', group=session["group"]) }}'">Cancel</button>
             {% if form.param_critical.data == 0 %}
-            <td class="p-5">{{ form.deletebtn(class_="btn btn-danger") }}</td>
+            {{ form.deletebtn(class_="btn btn-danger") }}
             {% endif %}
-
+            </td>
           </tr>
         </table>
     </form>
-    </div>
 
-</div>
 
 {% endblock %}
