--- a/project/templates/editcomplex.html
+++ b/project/templates/editcomplex.html
@@ -36,6 +36,7 @@
 
                       {% if data %}
                       {{ form.deletebtn(class_="btn btn-danger") }}
+                      &nbsp;<button type=button name="cancel" id="cancel" class="btn btn-danger button_fpa" data-toggle="modal" data-target="#messageModalCenter">Delete</button>
                       {% endif %}
                     </div>
                   </div>
