--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    {% block head %}
+    <title>{% block title %}{% endblock %} - Firewall Booking Application</title>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,16 +20,14 @@
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 
-    <title>{% block title %}{% endblock %} - Firewall Booking Application</title>
-    {% endblock %}
-  </head>
-  <body>
+
     <!-- Optional JavaScript -->
     <script src="{{ url_for('static', filename='js/moment-with-locales.min.js')}}{{ unique_time() }}"></script>
     <!-- <script src="{{ url_for('static', filename='js/moment.js')}}{{ unique_time() }}"></script> -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="{{ url_for('static', filename='js/jquery-3.2.1.slim.min.js')}}"></script>
     <script src="{{ url_for('static', filename='js/popper.min.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/tooltip.min.js')}}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap-select.min.js')}}"></script>
 
@@ -39,6 +38,10 @@
     <script src="{{ url_for('static', filename='fullcalendar/packages/daygrid/main.js')}}"></script>
     <script src="{{ url_for('static', filename='fullcalendar/packages/interaction/main.js')}}"></script>
 
+    {% block head %}
+    {% endblock %}
+  </head>
+  <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
         <a class="navbar-brand" href="#"><h1><div class="badge badge-primary"> {{ get_name() }} </div></h1></a>
@@ -95,11 +98,76 @@
       </div>
     </nav>
 
-    {% with messages = get_flashed_messages(with_categories=true) %}
+    <div id="errorModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-dialog-centered ">
+
+            <!-- Modal content-->
+            <div class="modal-content alert-warning">
+                <div class="modal-body alert-warning">
+                    {% with messages = get_flashed_messages(category_filter=["warning"]) %}
+                    {% if messages %}
+                    <ul class=flashes>
+                        {% for message in messages %}
+                        <div class="text-dark alert-warning" role="alert">{{ message }}</div>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                    {% endwith %}
+                </div>
+                <div class="modal-footer d-flex justify-content-center flex-column alert-warning">
+                    <button type="button" class="btn btn-default button_fpa bg-secondary text-white" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!-- Modal Confirmation -->
+    <div class="modal fade" id="messageModalCenter" tabindex="-1" role="dialog" aria-labelledby="messageModalCenter" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="messageModalLongTitle">Confirmation</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div id="messageModalBody">Are you sure you wish to continue with the deletion?</div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary" id="submitFormDelete">Confirm</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <script type="text/javascript">
+    $(document).ready(function () {
+        $("#submitFormDelete").click(function() {
+            $("#deletebtn").click();
+        });
+
+        $(function () {
+          $('[data-toggle="tooltip"]').tooltip()
+        });
+
+        var messages = "{{ get_flashed_messages(category_filter=['warning']) }}";
+        if (typeof messages != 'undefined' && messages != '[]') {
+            $("#errorModal").modal();
+        };
+
+    });
+    </script>
+
+    {% with messages = get_flashed_messages(category_filter=['success']) %}
       <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
       {% if messages %}
-        {% for category, message in messages %}
-          <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+        {% for message in messages %}
+          <div class="alert alert-success alert-dismissible" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <!-- <strong>Title</strong> --> {{ message }}
           </div>
