--- a/project/templates/editdate.html
+++ b/project/templates/editdate.html
@@ -72,7 +72,7 @@
                     </script>
 
                     <div class="input-group-append">
-                      <span class="input-group-text">Click field to set date & time</span>
+                      <span class="input-group-text bg-info text-white">Click field to set date & time</span>
                     </div>
                     </div>
                   </div>
@@ -115,7 +115,7 @@
                         });
                     </script>
                     <div class="input-group-append">
-                      <span class="input-group-text">Click field to set date & time</span>
+                      <span class="input-group-text bg-info text-white">Click field to set date & time</span>
                     </div>
                     </div>
                   </div>
@@ -128,8 +128,9 @@
             <td class="p-5">
              {{ form.savebtn(class_="btn btn-primary button_fpa") }} <button type=button name="cancel" id="cancel" class="btn btn-primary button_fpa" onclick="location.href='{{ url_for('gui_blueprint._dates') }}'">Cancel</button>
              {% if data %}
-             &nbsp;&nbsp;&nbsp;{{ form.deletebtn(class_="btn btn-danger") }}
-             {% endif %}
+              {{ form.deletebtn(class_="btn btn-danger") }}
+              &nbsp;<button type=button name="cancel" id="cancel" class="btn btn-danger button_fpa" data-toggle="modal" data-target="#messageModalCenter">Delete</button>
+              {% endif %}
             </td>
           </tr>
         </table>
