--- a/project/templates/complexes.html
+++ b/project/templates/complexes.html
@@ -27,7 +27,7 @@
         <td>{{ rec[1].param_value }}</td>
         <td>{{ rec[2].param_value }}</td>
         <td>{{ rec[3].param_value }}</td>
-        <td>{{ rec[0].complex_updated.strftime('%d-%m-%Y %H:%M') }}</td>
+        <td>{{ rec[0].complex_updated }}</td>
         <td>{{ rec[4].param_name }}</td>
       </tr>
       {% else %}
